// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AggregationFilters does not render aggregations when numberOfResults is 0 1`] = `""`;

exports[`AggregationFilters does not render aggregations with empty buckets 1`] = `
<div
  className="bg-white pa3"
>
  <div
    key="agg1"
  >
    <EventTracker
      eventId="Facet-Aggregation 1"
      eventPropName="onChange"
      extractEventArgsToForward={null}
    >
      <AggregationFilter
        aggregationType="checkbox"
        buckets={
          Immutable.List [
            Immutable.Map {},
          ]
        }
        name="Aggregation 1"
        onChange={[Function]}
      />
    </EventTracker>
  </div>
</div>
`;

exports[`AggregationFilters renders with all props set 1`] = `
<div
  className="bg-white pa3"
>
  <div
    key="agg1"
  >
    <EventTracker
      eventId="Facet-[Range] Aggregation 1"
      eventPropName="onChange"
      extractEventArgsToForward={null}
    >
      <AggregationFilter
        aggregationType="range"
        buckets={
          Immutable.List [
            Immutable.Map {
              "key": "foo",
              "doc_count": 1,
            },
          ]
        }
        name="[Range] Aggregation 1"
        onChange={[Function]}
        selections="foo"
      />
    </EventTracker>
  </div>
  <div
    key="agg2"
  >
    <EventTracker
      eventId="Facet-Aggregation 2"
      eventPropName="onChange"
      extractEventArgsToForward={null}
    >
      <AggregationFilter
        aggregationType="checkbox"
        buckets={
          Immutable.List [
            Immutable.Map {
              "key": "foo_2",
              "doc_count": 1,
            },
          ]
        }
        name="Aggregation 2"
        onChange={[Function]}
        splitDisplayName={true}
      />
    </EventTracker>
  </div>
</div>
`;
